White text looks nice

--- a/index.css
+++ b/index.css
@@ -28,29 +28,36 @@ body {
     font-family: DactylBold;
     font-size: 20pt;
     text-decoration: none;
-    text-decoration-color: black;
-}
-.fade:link {
-    color: black;
-    text-shadow: 0px 0px 5px white;
-}
-.fade:visited {
-    color: darkgreen;
 }
 .fade img {
     position: absolute;
-    opacity: 0.9;
     width: 220px;
     height: 220px;
     margin: -20px;
-    transition: all .8s;
-    z-index: -1;
+    transition: opacity .8s;
 }
 /* fade between images on hover, from https://stackoverflow.com/a/44908602/1991573 */
-.fade img:first-child { 
+.fade img:first-child {
     opacity: 1;
     z-index: -1;
 }
 .fade:hover img:nth-child(2) { 
     opacity: 0;
+}
+.fade:after {
+    content: '';
+    position: absolute;
+    width: 220px;
+    height: 220px;
+    margin: -20px;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 70%, rgba(0,0,0,0.1) 100%);
+}
+.content {
+    position: relative;
+    background: rgb(0, 0, 0); /* Fallback color */
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1; 
+    /* height: 20%; */
+    width: 100%;
+    padding: 25px;
 }
