--- a/index.css
+++ b/index.css
@@ -14,43 +14,42 @@ body {
 .flow {
     display: flex;
     flex-wrap: wrap;
-    /* padding: 20px;
-    width: 200px;
-    height: 200px; */
+    justify-content: center;
 }
 .fade {
     display: flex;
     flex-wrap: wrap;
     margin: 20px;
-    padding: 20px;
-    width: 180px;
-    height: 180px;
+    padding: 60px;
+    width: 160px;
+    height: 160px;
     font-family: DactylBold;
     font-size: 20pt;
     text-decoration: none;
 }
-.fade img {
+.fade img,canvas {
     position: absolute;
-    width: 220px;
-    height: 220px;
-    margin: -20px;
+    width: 280px;
+    height: 280px;
+    margin: -60px;
     transition: opacity .8s;
+    z-index: 0;
 }
 /* fade between images on hover, from https://stackoverflow.com/a/44908602/1991573 */
-.fade img:first-child {
-    opacity: 1;
-    z-index: -1;
-}
-.fade:hover img:nth-child(2) { 
+.fade img:first-child,.fade canvas {
     opacity: 0;
+    z-index: 1;
+}
+.fade:hover img:first-child,.fade:hover canvas { 
+    opacity: 1;
 }
 .fade:after {
     content: '';
     position: absolute;
-    width: 220px;
-    height: 220px;
-    margin: -20px;
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 70%, rgba(0,0,0,0.1) 100%);
+    width: 280px;
+    height: 280px;
+    margin: -60px;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 70%, rgba(0,0,0,0.3) 100%);
 }
 .content {
     position: relative;
@@ -60,4 +59,5 @@ body {
     /* height: 20%; */
     width: 100%;
     padding: 25px;
+    z-index: 2;
 }
